--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ input{
     color: black;
     background-color: greenyellow !important;
 }
+.cs_jogos{
+    background-color: rgb(24, 129, 106);
+}
 #probabilometro{
     width: 160px;
     height: 40px;
@@ -115,6 +118,12 @@ input{
     border-bottom-right-radius: 25px;
     text-shadow: 0px 0px 3px black;
     box-shadow: 0px 0px 15px black;
+}
+.quadro_porc_direita{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
 }
 #completa_slots{
     width: 492.8px;
